--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,24 @@
   <body>
     <load src="./partials/header.html"/>
 
+    <header>
+
+      <load src="./partials/header.html"></load>
+
+    </header>
+
     <main>
       <!-- Loads the specified .html file -->
-      <load src="./partials/badges.html" />
+       
+      <!-- <load src="" /> -->
+
     </main>
 
+    <footer>
+
     <load src="./partials/footer.html" />
+
+    </footer>
 
     <script type="module" src="main.js"></script>
   </body>
