--- a/src/index.html
+++ b/src/index.html
@@ -10,24 +10,12 @@
   <body>
     <load src="./partials/header.html"/>
 
-    <header>
-
-      <load src="./partials/header.html"></load>
-
-    </header>
-
     <main>
       <!-- Loads the specified .html file -->
-       
-      <!-- <load src="" /> -->
-
+      <load src="./partials/badges.html" />
     </main>
 
-    <footer>
-
     <load src="./partials/footer.html" />
-
-    </footer>
 
     <script type="module" src="main.js"></script>
   </body>
