--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
-    <link rel="stylesheet" href="./css/styles.css" />
-  </head>
-  <body>
-    <load src="./partials/header.html"/>
 
-    <main>
-      <!-- Loads the specified .html file -->
-    </main>
+<head>
+  <meta charset="UTF-8" />
+  <!-- <link rel="icon" type="image/png" href="./img/controller" /> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Game Vault</title>
+  <link rel="stylesheet" href="./css/styles.css" />
+</head>
 
-    <load src="./partials/footer.html" />
+<body>
+  <load src="./partials/header.html" />
 
-    <script type="module" src="main.js"></script>
-  </body>
+  <main>
+    <!-- Loads the specified .html file -->
+  </main>
+
+  <load src="./partials/footer.html" />
+
+  <script type="module" src="main.js"></script>
+</body>
+
 </html>
