--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,10 @@
   <main>
     <!-- Loads the specified .html file -->
   </main>
-
+  
+  <footer>
   <load src="./partials/footer.html" />
+  </footer>
 
   <script type="module" src="main.js"></script>
 </body>
