--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,25 @@
 </head>
 
 <body>
-  <load src="./partials/header.html" />
+
+  <header>
+      <load src="./partials/header.html" />
+  </header>
 
   <main>
     <!-- Loads the specified .html file -->
+
+    <aside>
+      
+    </aside>
+
+    
   </main>
 
   <load src="./partials/footer.html" />
+
+  
+
 
   <script type="module" src="main.js"></script>
 </body>
