--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 <body>
 
   <header>
-      <load src="./partials/header.html" />
+      <load src="/partials/header.html" />
   </header>
 
   <main>
@@ -26,7 +26,7 @@
   </main>
   
   <footer>
-  <load src="./partials/footer.html" />
+  <load src="/partials/footer.html" />
   </footer>
 
   
