--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,10 @@
   
 
 
-  <script type="module" src="main.js"></script>
+  <script type="module" src="main.js"></script> 
+  
+  <script type="module" src="./js/infoFromDB.js"></script> 
+  
 </body>
 
 </html>
