--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     <!-- Loads the specified .html file -->
 
     <aside>
-      
+      <load src="/partials/aside.html" />
     </aside>
 
     
