--- a/src/index.html
+++ b/src/index.html
@@ -6,27 +6,27 @@
   <link rel="icon" type="image/svg+xml" href="./img/controller.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Game Vault</title>
-  <link rel="stylesheet" href="/css/styles.css" />
+  <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
 
   <header>
-      <load src="/partials/header.html" />
+      <load src="./partials/header.html" />
   </header>
 
   <main>
     <!-- Loads the specified .html file -->
 
     <aside>
-      <load src="/partials/aside.html" />
+      <load src="./partials/aside.html" />
     </aside>
 
     
   </main>
   
   <footer>
-  <load src="/partials/footer.html" />
+  <load src="./partials/footer.html" />
   </footer>
 
   
