added scrolltop button

--- a/src/index.html
+++ b/src/index.html
@@ -21,20 +21,18 @@
     <aside>
       <load src="./partials/aside.html" />
     </aside>
-
     
+    <!-- Scroll to Top Button -->
+    <load src="./partials/scrolltop.html" />
   </main>
   
   <footer>
   <load src="./partials/footer.html" />
   </footer>
 
-  
-
-
   <script type="module" src="main.js"></script> 
-  
-  <script type="module" src="./js/infoFromDB.js"></script> 
+  <script type="module" src="./js/infoFromDB.js"></script>
+  <script src="./js/scrolltop.js"></script>
 
 </body>
 
