--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
 
   <script type="module" src="main.js"></script> 
   <script type="module" src="./js/infoFromDB.js"></script>
-  <!-- <script type="module" src="./js/scrolltop.js"></script> -->
+  <script type="module" src="./js/scrolltop.js"></script>
 
 </body>
 
