--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 <body>
 
   <header>
-      <load src="./partials/header.html" />
+    <load src="./partials/header.html" />
   </header>
 
   <main>
@@ -21,18 +21,18 @@
     <aside>
       <load src="./partials/aside.html" />
     </aside>
-    
+
     <!-- Scroll to Top Button -->
     <load src="./partials/scrolltop.html" />
   </main>
-  
+
   <footer>
-  <load src="./partials/footer.html" />
+    <load src="./partials/footer.html" />
   </footer>
 
-  <script type="module" src="main.js"></script> 
-  <script type="module" src="./js/infoFromDB.js"></script>
-  <script type="module" src="./js/scrolltop.js"></script>
+  <script type="module" src="main.js"></script>
+  <script type="module" src="/js/infoFromDB.js"></script>
+  <script type="module" src="/js/scrolltop.js"></script>
 
 </body>
 
