--- a/src/index.html
+++ b/src/index.html
@@ -30,9 +30,9 @@
     <load src="./partials/footer.html" />
   </footer>
 
-  <script type="module" src="main.js"></script>
-  <script type="module" src="/js/infoFromDB.js"></script>
-  <script type="module" src="/js/scrolltop.js"></script>
+  <script type="module" defer src="main.js"></script>
+  <script type="module" defer src="/js/infoFromDB.js"></script>
+  <script type="module" defer src="/js/scrolltop.js"></script>
 
 </body>
 
