--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,10 @@
       <load src="./partials/aside.html" />
     </aside>
 
+    <!-- Most Popular Games -->
+    <load src="./partials/topGames.html" />
+
+
     <!-- Scroll to Top Button -->
     <load src="./partials/scrolltop.html" />
   </main>
@@ -33,6 +37,7 @@
   <script type="module" defer src="main.js"></script>
   <script type="module" defer src="/js/infoFromDB.js"></script>
   <script type="module" defer src="/js/scrolltop.js"></script>
+  <script type="module" defer src="/js/topGame.js"></script>
 
 </body>
 
