--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,7 @@
   <script type="module" defer src="/js/infoFromDB.js"></script>
   <script type="module" defer src="/js/scrolltop.js"></script>
   <script type="module" defer src="/js/topGame.js"></script>
+  <script type="module" defer src="/js/categoryToggle.js"></script>
 
 </body>
 
