створення файлів модального вікна

--- a/src/index.html
+++ b/src/index.html
@@ -30,8 +30,11 @@
 
     <!-- Scroll to Top Button -->
     <load src="./partials/scrolltop.html" />
-  </main>
+    
+    <load src="./partials/modalWindow.html" />
 
+  </main>
+  
   <footer>
     <load src="./partials/footer.html" />
   </footer>
