add modal window

--- a/src/index.html
+++ b/src/index.html
@@ -30,11 +30,11 @@
 
     <!-- Scroll to Top Button -->
     <load src="./partials/scrolltop.html" />
-    
+
     <load src="./partials/modalWindow.html" />
 
   </main>
-  
+
   <footer>
     <load src="./partials/footer.html" />
   </footer>
@@ -44,6 +44,7 @@
   <script type="module" defer src="/js/scrolltop.js"></script>
   <script type="module" defer src="/js/topGame.js"></script>
   <script type="module" defer src="/js/categoryToggle.js"></script>
+  <script type="module" defer src="/js/modalWindow.js"></script>
 
 </body>
 
