--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,20 @@
     <load src="./partials/footer.html" />
   </footer>
 
+  <!-- Додані більше елементів для бліків -->
+  <div class="glow1"></div>
+  <div class="glow2"></div>
+  <div class="glow3"></div>
+  <div class="glow4"></div>
+  <div class="glow5"></div>
+  <div class="glow6"></div>
+  <div class="glow7"></div>
+  <div class="glow8"></div>
+  <div class="glow9"></div>
+  <div class="glow10"></div>
+  <div class="glow11"></div>
+  <div class="glow-header-left"></div>
+
   <script type="module" defer src="main.js"></script>
   <script type="module" defer src="/js/infoFromDB.js"></script>
   <script type="module" defer src="/js/scrolltop.js"></script>
