--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,8 @@
 
     <load src="./partials/modalWindow.html" />
 
+    <load src="./partials/aboutModalWindow.html" />
+
   </main>
 
   <footer>
@@ -59,6 +61,7 @@
   <script type="module" defer src="/js/topGame.js"></script>
   <script type="module" defer src="/js/categoryToggle.js"></script>
   <script type="module" defer src="/js/modalWindow.js"></script>
+  <script type="module" defer src="/js/aboutModalWindow.js"></script>
 
 </body>
 
