added feedback modal window.

--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,8 @@
 
     <load src="./partials/aboutModalWindow.html" />
 
+    <load src="./partials/feedbackModalWindow.html" />
+    
   </main>
 
   <footer>
@@ -62,6 +64,7 @@
   <script type="module" defer src="/js/categoryToggle.js"></script>
   <script type="module" defer src="/js/modalWindow.js"></script>
   <script type="module" defer src="/js/aboutModalWindow.js"></script>
+  <script type="module" defer src="/js/feedbackModalWindow.js"></script>
 
 </body>
 
