--- a/src/shopping-list.html
+++ b/src/shopping-list.html
@@ -22,13 +22,15 @@
     </div>
 
     <section class="shopping-list-section shopping-list-container">
-      <div class="shopping-list-content">
+      <div class="shopping-list-content" id="shopping-list-container">
+        <!-- Ігри з Local Storage будуть відображатися тут -->
         <div class="empty-cart">
           <img src="./img/empty-cart.svg" alt="Empty Cart" class="empty-cart-image">
           <p class="empty-cart-text">This page is empty, add some items and proceed to order.</p>
         </div>
       </div>
     </section>
+
   </main>
 
   <footer>
