--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,8 @@
   <script type="module" defer src="/js/modalWindow.js"></script>
   <script type="module" defer src="/js/aboutModalWindow.js"></script>
   <script type="module" defer src="/js/feedbackModalWindow.js"></script>
-
+      
+  <script type="module" defer src="/js/shoppingList.js"></script>
 </body>
 
 </html>
