--- a/src/shopping-list.html
+++ b/src/shopping-list.html
@@ -8,6 +8,8 @@
   <title>Shopping List - GameVault</title>
   <link rel="stylesheet" href="./css/styles.css" />
   <link rel="stylesheet" href="./css/shopping-list.css" />
+
+  <base href="/ProjectGGG/">
 </head>
 
 <body>
