revert formatting changes in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -1,69 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./img/controller.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Game Vault</title>
-    <link rel="stylesheet" href="./css/styles.css" />
-    <base href="/ProjectGGG/" />
-  </head>
 
-  <body>
-    <header>
-      <load src="./partials/header.html" />
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="./img/controller.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Game Vault</title>
+  <link rel="stylesheet" href="./css/styles.css" />
+  <base href="/ProjectGGG/">
 
-    <main>
-      <!-- Loads the specified .html file -->
+</head>
 
-      <aside>
-        <load src="./partials/aside.html" />
-      </aside>
+<body>
 
-      <!-- Most Popular Games -->
-      <load src="./partials/topGames.html" />
+  <header>
+    <load src="./partials/header.html" />
+  </header>
 
-      <!-- Scroll to Top Button -->
-      <load src="./partials/scrolltop.html" />
+  <main>
+    <!-- Loads the specified .html file -->
 
-      <load src="./partials/modalWindow.html" />
+    <aside>
+      <load src="./partials/aside.html" />
+    </aside>
 
-      <load src="./partials/aboutModalWindow.html" />
+    <!-- Most Popular Games -->
+    <load src="./partials/topGames.html" />
 
-      <load src="./partials/feedbackModalWindow.html" />
 
-      <load src="./partials/reviewsModalWindow.html" />
-    </main>
+    <!-- Scroll to Top Button -->
+    <load src="./partials/scrolltop.html" />
 
-    <footer>
-      <load src="./partials/footer.html" />
-    </footer>
+    <load src="./partials/modalWindow.html" />
 
-    <!-- Додані більше елементів для бліків -->
-    <div class="glow1"></div>
-    <div class="glow2"></div>
-    <div class="glow3"></div>
-    <div class="glow4"></div>
-    <div class="glow5"></div>
-    <div class="glow6"></div>
-    <div class="glow7"></div>
-    <div class="glow8"></div>
-    <div class="glow9"></div>
-    <div class="glow10"></div>
-    <div class="glow11"></div>
-    <div class="glow-header-left"></div>
+    <load src="./partials/aboutModalWindow.html" />
 
-    <script type="module" defer src="main.js"></script>
-    <script type="module" defer src="/js/infoFromDB.js"></script>
-    <script type="module" defer src="/js/scrolltop.js"></script>
-    <script type="module" defer src="/js/topGame.js"></script>
-    <script type="module" defer src="/js/categoryToggle.js"></script>
-    <script type="module" defer src="/js/modalWindow.js"></script>
-    <script type="module" defer src="/js/aboutModalWindow.js"></script>
-    <script type="module" defer src="/js/feedbackModalWindow.js"></script>
+    <load src="./partials/feedbackModalWindow.html" />
+    
+    <load src="./partials/reviewsModalWindow.html" />
 
-    <script type="module" defer src="/js/shoppingList.js"></script>
-    <script type="module" defer src="/js/reviewsModalWindow.js"></script>
-  </body>
+  </main>
+
+  <footer>
+    <load src="./partials/footer.html" />
+  </footer>
+
+  <!-- Додані більше елементів для бліків -->
+  <div class="glow1"></div>
+  <div class="glow2"></div>
+  <div class="glow3"></div>
+  <div class="glow4"></div>
+  <div class="glow5"></div>
+  <div class="glow6"></div>
+  <div class="glow7"></div>
+  <div class="glow8"></div>
+  <div class="glow9"></div>
+  <div class="glow10"></div>
+  <div class="glow11"></div>
+  <div class="glow-header-left"></div>
+
+  <script type="module" defer src="main.js"></script>
+  <script type="module" defer src="/js/infoFromDB.js"></script>
+  <script type="module" defer src="/js/scrolltop.js"></script>
+  <script type="module" defer src="/js/topGame.js"></script>
+  <script type="module" defer src="/js/categoryToggle.js"></script>
+  <script type="module" defer src="/js/modalWindow.js"></script>
+  <script type="module" defer src="/js/aboutModalWindow.js"></script>
+  <script type="module" defer src="/js/feedbackModalWindow.js"></script>
+  <script type="module" defer src="/js/reviewsModalWindow.js"></script>
+      
+  <script type="module" defer src="/js/shoppingList.js"></script>
+
+
+</body>
+
 </html>
