Create reviews modal window (#34)
* add reviewers images

* create "reviewsModalWindow.html"

* add styles for reviews window

* create "reviewsModalWindow.js"

* include created files in the page

* fix reviewers images paths

* fix selecting wrong modal window

* revert formatting changes in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,8 @@
 
     <load src="./partials/feedbackModalWindow.html" />
     
+    <load src="./partials/reviewsModalWindow.html" />
+
   </main>
 
   <footer>
@@ -65,8 +67,11 @@
   <script type="module" defer src="/js/modalWindow.js"></script>
   <script type="module" defer src="/js/aboutModalWindow.js"></script>
   <script type="module" defer src="/js/feedbackModalWindow.js"></script>
+  <script type="module" defer src="/js/reviewsModalWindow.js"></script>
       
   <script type="module" defer src="/js/shoppingList.js"></script>
+
+
 </body>
 
 </html>
