--- a/src/index.html
+++ b/src/index.html
@@ -8,18 +8,14 @@
   <title>Game Vault</title>
   <link rel="stylesheet" href="./css/styles.css" />
   <base href="/ProjectGGG/">
-
 </head>
 
 <body>
-
   <header>
     <load src="./partials/header.html" />
   </header>
 
   <main>
-    <!-- Loads the specified .html file -->
-
     <aside>
       <load src="./partials/aside.html" />
     </aside>
@@ -27,39 +23,25 @@
     <!-- Most Popular Games -->
     <load src="./partials/topGames.html" />
 
-
     <!-- Scroll to Top Button -->
     <load src="./partials/scrolltop.html" />
 
     <load src="./partials/modalWindow.html" />
-
     <load src="./partials/aboutModalWindow.html" />
-
     <load src="./partials/feedbackModalWindow.html" />
-    
     <load src="./partials/reviewsModalWindow.html" />
-
   </main>
 
   <footer>
     <load src="./partials/footer.html" />
   </footer>
 
-  <!-- Додані більше елементів для бліків -->
-  <div class="glow1"></div>
-  <div class="glow2"></div>
-  <div class="glow3"></div>
-  <div class="glow4"></div>
-  <div class="glow5"></div>
-  <div class="glow6"></div>
-  <div class="glow7"></div>
-  <div class="glow8"></div>
-  <div class="glow9"></div>
-  <div class="glow10"></div>
-  <div class="glow11"></div>
+  <!-- Тільки один статичний glow effect для хедера -->
   <div class="glow-header-left"></div>
 
+  <!-- Основні скрипти -->
   <script type="module" defer src="main.js"></script>
+  <script type="module" defer src="/js/glow-effects.js"></script>
   <script type="module" defer src="/js/infoFromDB.js"></script>
   <script type="module" defer src="/js/scrolltop.js"></script>
   <script type="module" defer src="/js/topGame.js"></script>
@@ -68,10 +50,7 @@
   <script type="module" defer src="/js/aboutModalWindow.js"></script>
   <script type="module" defer src="/js/feedbackModalWindow.js"></script>
   <script type="module" defer src="/js/reviewsModalWindow.js"></script>
-      
   <script type="module" defer src="/js/shoppingList.js"></script>
-
-
 </body>
 
 </html>
