--- a/src/auth.html
+++ b/src/auth.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Авторизація</title>
-    <link rel="stylesheet" href="styles/auth.css">
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/auth.css" />
+
 </head>
 
 <body>
     <div class="auth-container">
+        <div class="back-arrow" onclick="window.history.back();"></div>
         <h1>Вхід до системи</h1>
         <form id="loginForm">
             <label for="username">Логін:</label>
@@ -20,7 +23,8 @@
         </form>
         <p>Немає акаунта? <a href="register.html">Створити акаунт</a></p>
     </div>
-    <script src="scripts/auth.js"></script>
+
+    <script type="module" defer src="./js/auth.js"></script>
 </body>
 
 </html>
