--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
   <script type="module" defer src="/js/aboutModalWindow.js"></script>
   <script type="module" defer src="/js/feedbackModalWindow.js"></script>
   <script type="module" defer src="/js/reviewsModalWindow.js"></script>
-  <script type="module" defer src="/js/shoppingList.js"></script>
+  <script type="module" defer src="/js/updateLogin.js"></script>
 </body>
 
 </html>
