--- a/src/shopping-list.html
+++ b/src/shopping-list.html
@@ -16,6 +16,15 @@
 
   <header>
     <load src="./partials/header.html" />
+
+    <div id="blur-overlay" class="blur-overlay hidden">
+      <div class="login-message">
+        <p>Спочатку увійдіть у систему.</p>
+        <button id="redirect-login">Увійти</button>
+      </div>
+    </div>
+
+
   </header>
 
   <main class="shopping-list-grid">
