add shopping list logic

--- a/src/shopping-list.html
+++ b/src/shopping-list.html
@@ -13,7 +13,6 @@
 </head>
 
 <body>
-
   <header>
     <load src="./partials/header.html" />
 
@@ -23,8 +22,6 @@
         <button id="redirect-login">Увійти</button>
       </div>
     </div>
-
-
   </header>
 
   <main class="shopping-list-grid">
@@ -35,13 +32,12 @@
     <section class="shopping-list-section shopping-list-container">
       <div class="shopping-list-content" id="shopping-list-container">
         <!-- Ігри з Local Storage будуть відображатися тут -->
-        <div class="empty-cart">
+        <div class="empty-cart hidden">
           <img src="./img/empty-cart.svg" alt="Empty Cart" class="empty-cart-image">
-          <p class="empty-cart-text">This page is empty, add some items and proceed to order.</p>
+          <p class="empty-cart-text">Ця сторінка порожня, додайте кілька товарів, щоб оформити замовлення.</p>
         </div>
       </div>
     </section>
-
   </main>
 
   <footer>
