переносить shopping list js в корінь

--- a/src/shopping-list.html
+++ b/src/shopping-list.html
@@ -46,7 +46,7 @@
 
   <script type="module" src="main.js"></script>
   <script type="module" src="/js/infoFromDB.js"></script>
-  <script type="module" defer src="/js/shoppingList.js"></script>
+  <script type="module" defer src="shoppingList.js"></script>
 </body>
 
 </html>
