--- a/src/shopping-list.html
+++ b/src/shopping-list.html
@@ -46,7 +46,7 @@
 
   <script type="module" src="main.js"></script>
   <script type="module" src="/js/infoFromDB.js"></script>
-  <script type="module" src="shoppingList.js"></script>
+  <script type="module" src="https://raw.githubusercontent.com/MfD0/ProjectGGG/refs/heads/main/src/js/shoppingList.js"></script>
 </body>
 
 </html>
