--- a/src/shopping-list.html
+++ b/src/shopping-list.html
@@ -44,9 +44,9 @@
     <load src="./partials/footer.html" />
   </footer>
 
-  <script type="module" src="main.js"></script>
+  <script type="module" src="./js/shoppingList.js"></script>
   <script type="module" src="/js/infoFromDB.js"></script>
-  <script type="module" src="https://raw.githubusercontent.com/MfD0/ProjectGGG/refs/heads/main/src/js/shoppingList.js"></script>
+  <script type="module" src="main.js"></script>
 </body>
 
 </html>
