add update login button status

--- a/src/shopping-list.html
+++ b/src/shopping-list.html
@@ -45,6 +45,7 @@
   </footer>
 
   <script type="module" src="./js/shoppingList.js"></script>
+  <script type="module" src="./js/updateLogin.js"></script>
 </body>
 
 </html>
